# madtrade

./: .gitignore  CMakeLists.txt  README.md  infer.sh  pyproject.toml  train.sh
scripts/: jax_infer.py  jax_policy.py  jax_train.py
src/: CMakeLists.txt  bindings.cpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  sim.inl  sim_flags.hpp  sim_flags.inl  test.cpp
